--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-cmsdeploy",
   "description": "Node.js Grunt plugin. Deploy file content to a remote server",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "homepage": "https://github.com/jackchen83/cmsdeploy",
   "author": {
     "name": "yongbchen",
@@ -39,7 +39,9 @@
     "grunt": "~0.4.4"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin",
+    "server",
+    "deploy"
   ],
   "dependencies": {
     "async": "0.9.0"
