--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "grunt-cmsdeploy",
   "description": "Node.js Grunt plugin. Deploy file content to a remote server",
-  "version": "0.1.5",
+  "version": "0.2.5",
   "homepage": "https://github.com/jackchen83/cmsdeploy",
   "author": {
     "name": "yongbchen",
     "email": "yongbchen@ebay.com"
   },
   "contributors": {
-	"name": "Fred Tu",
+    "name": "Fred Tu",
     "email": "tu_fred@hotmail.com",
-	"url": "https://github.com/frtu"
+    "url": "https://github.com/frtu"
   },
   "repository": {
     "type": "git",
@@ -33,10 +33,10 @@
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt": "~0.4.4"
+    "grunt": "~0.4.x"
   },
   "peerDependencies": {
-    "grunt": "~0.4.4"
+    "grunt": "~0.4.x"
   },
   "keywords": [
     "gruntplugin",
@@ -44,6 +44,7 @@
     "deploy"
   ],
   "dependencies": {
-    "async": "0.9.0"
+    "async": "0.9.0",
+    "underscore": "^1.7.0"
   }
 }
