--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-cmsdeploy",
   "description": "Node.js Grunt plugin. Deploy file content to a remote server",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "homepage": "https://github.com/jackchen83/cmsdeploy",
   "author": {
     "name": "yongbchen",
@@ -45,6 +45,6 @@
   ],
   "dependencies": {
     "async": "0.9.0",
-    "underscore": "^1.7.0"
+    "underscore": "~1.7.0"
   }
 }
